--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,5 +1,5 @@
-DB_USER= admin
-DATABASE= project
-DB_PASSWORD= project
-DB_PORT = 5432
-DB_HOST=  db
+DB_USER=Soccer_Scout
+DATABASE=soccer-sleuth-db
+DB_PASSWORD=Soccer_Sleuth_2023
+DB_PORT=5432
+DB_HOST=db
