--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   db:
     image: postgres:14.1-alpine
-    container_name: project
+    container_name: soccer-sleuth-db
     restart: always
     environment:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
@@ -11,27 +11,13 @@ services:
     volumes: 
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
       - postgres_data:/var/lib/postgresql/data/
-
-  pgadmin:
-    container_name: pgadmin
-    image: dpage/pgadmin4
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=pgadmin4@pgadmin.org
-      - PGADMIN_DEFAULT_PASSWORD=admin
-      - PGADMIN_CONFIG_CHECK_EMAIL_DELIVERABILITY=False
-    ports:
-      - "5050:80"
-    volumes:
-      - pgadmin-data:/var/lib/pgadmin
-
-
   backend:
-    container_name: project-backend
+    container_name: soccer-sleuth-backend
     build:
       context: ./backend
       dockerfile: Dockerfile.prod
      
-    image: project-backend
+    image: soccer-sleuth-backend
     depends_on:
       - db
     ports:
@@ -48,12 +34,12 @@ services:
     volumes:
       - './:/src'
   frontend:
-    container_name: project-frontend
+    container_name: soccer-sleuth-frontend
     build:
       context: ./frontend
       dockerfile: Dockerfile.prod
       
-    image: project-frontend
+    image: soccer-sleuth-frontend
     ports:
       - 3000:3000
     # networks:
@@ -75,7 +61,7 @@ services:
        - frontend
 volumes:
   postgres_data:
-  pgadmin-data:
+
 #Docker Networks
 # networks:
 #   app-network:
