--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
 
   location /api {
     # Forward API requests to the Express API running on port 8080
-    proxy_pass http://project-backend:8080;
+    proxy_pass http://soccer-sleuth-backend:8080;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -12,7 +12,7 @@ server {
 
   location / {
     # Serve the React app from the frontend container
-    proxy_pass http://project-frontend:3000;
+    proxy_pass http://soccer-sleuth-frontend:3000;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
